--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
 provider: releases
 file_glob: true
 skip_cleanup: true
-api_key: $jeddie
+api_key: $GITHUB_TOKEN
 file:
 - .travis.yml
 on:
